fix(footer): increase footer z-index to display above all other content

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1450,7 +1450,7 @@ main,
   text-align: center;
   top: auto;
   width: 100%;
-  z-index: 2;
+  z-index: 5;
 
   @include breakpoint(large) {
     padding: 14px 0 4px;
